--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.15.0",
     "bcrypt": "^5.1.1",
     "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "package": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
